# mlkit

./: AI_RULES.json  main.py  pyproject.toml
clashpp/: README.md  clashpp.py  clashpp.sh
clashpp/conf/: .url  config.yaml  runtime.yaml
dotfiles/: readme.md
dotfiles/dotbot_config/: install_fonts.ps1  unix.yaml  windows.yaml
dotfiles/helix/: config.toml
dotfiles/shell/bash/: README.md
dotfiles/shell/bash/config/: aliases.bash  functions.bash  fzf.bash  loader.bash  paths.bash  starship.bash
dotfiles/shell/powershell/: README.md  editor.ps1  environment.ps1  functions.ps1  tools.ps1
dotfiles/shell/zsh/: readme.md
dotfiles/shell/zsh/config/: README.md  completion.zsh  editor.zsh  environment.zsh  functions.zsh  history.zsh  loader.zsh  options.zsh  plugins.zsh  prompt.zsh
dotfiles/shell/zsh/plugins/: README.md
dotfiles/starship/: starship.toml
dotfiles/wezterm/: wezterm.lua
dotfiles/yazi/config/: package.toml  theme.toml  yazi.toml
dotfiles/yk/: config.json
dotfiles/yk/source/: example.md  tools.md
mlkit/: main.py
mlkit/commands/alm/: __init__.py  prepare.py  scph_bands.py
mlkit/commands/amset/: __init__.py  export_data.py  submit_job.py  write_settings.py
mlkit/commands/shengbte/: __init__.py  write_control.py
mlkit/commands/tools/: __init__.py  xml2xyz.py
mlkit/commands/vasp/: __init__.py  jobs.py  scf.py  vasp_config.yaml  xml2xyz.py
mlkit/core/: shell.py
